tests/errors/type_check/error_span/accumulate_branch_multi.sim

        fn f(n: i64) {
            entry:
            branch(copy n) [true: nowhere1, false: nowhere2]
        }
        fn g(n: i64) {
            entry:
            branch(copy n) [true: nowhere1, false: nowhere2]
            nowhere1:
            return
            nowhere2: 
            return
        }
        