tests/errors/type_check/error_span/accumulate_branch_multi.err.expected
error: at 4:13: [TC-BranchConditionNotBool] In function 'f', block 'entry': branch condition must be bool, found i64
   |
 4 |             branch(copy n) [true: nowhere1, false: nowhere2]
   |             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
error: at 4:13: [TC-TerminatorUndefinedTarget] In function 'f', block 'entry': branch true target undefined block 'nowhere1'
   |
 4 |             branch(copy n) [true: nowhere1, false: nowhere2]
   |             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
error: at 4:13: [TC-TerminatorUndefinedTarget] In function 'f', block 'entry': branch false target undefined block 'nowhere2'
   |
 4 |             branch(copy n) [true: nowhere1, false: nowhere2]
   |             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
error: at 8:13: [TC-BranchConditionNotBool] In function 'g', block 'entry': branch condition must be bool, found i64
   |
 8 |             branch(copy n) [true: nowhere1, false: nowhere2]
   |             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
